# boldboy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/linux_cli/: CMakeLists.txt  main.cpp
app/qt/BoldboyQT/: CMakeLists.txt  boldboyqt.cpp  boldboyqt.h  boldboyqt.ui  emulatorworker.cpp  emulatorworker.h  main.cpp
core/: CMakeLists.txt
core/inc/: boldboy.h  cart_mbc1.h  cart_mbc2.h  cart_mbc3.h  cart_mbc5.h  cart_rom.h  cartregion.h  cartridge.h  console_logger.h  cpu.h  emptyregion.h  int_controller.h  io_controller.h  io_regs.h  io_serial.h  io_timer.h  ioregion.h  logger.h  memregion.h  mmu.h  ppu.h  ramregion.h  reg16.h  reg8.h  upperregion.h
core/inc/io/: io_controller.h  io_joypad.h  io_oam_dma.h  io_serial.h  io_timer.h
core/inc/ppu/: fetcher.h  oamentry.h  pixel.h  pixelfifo.h  registers.h  tileline.h
core/src/: boldboy.cpp  cpu.cpp  reg16.cpp  reg8.cpp
core/src/cart/: cart_mbc1.cpp  cart_mbc2.cpp  cart_mbc3.cpp  cart_mbc5.cpp  cart_rom.cpp  cartridge.cpp
core/src/cpu/: cpu.cpp  cpu_opcodes.cpp  int_controller.cpp  reg16.cpp  reg8.cpp
core/src/io/: io_controller.cpp  io_joypad.cpp  io_oam_dma.cpp  io_serial.cpp  io_timer.cpp
core/src/log/: console.cpp  logger.cpp
core/src/mmu/: cartregion.cpp  ioregion.cpp  mmu.cpp  ramregion.cpp  upperregion.cpp
core/src/ppu/: fetcher.cpp  oamentry.cpp  pixelfifo.cpp  ppu.cpp  tileline.cpp
ports/: CMakeLists.txt
ports/common/inc/: serial_console.h
ports/common/src/: serial_console.cpp
ports/serial/console/: CMakeLists.txt
ports/serial/console/inc/: serial_console.h
tests/: CMakeLists.txt  cart_tests.cpp  cpu_tests.cpp  mmu_tests.cpp  reg_tests.cpp  test_cart.cpp  test_cart.h
tests/harness/: run_tests.py  test_config.json
tests/runners/: CMakeLists.txt  mooneye.cpp
tools/: README.md  gen_optable.py  handlers.json  opcodes.json  parseops.py
